# AlgoTrading

./: .gitignore  README.md  assets_setup.py  chapter_2.ipynb  config.json  pyproject.toml  test.py
