[tool.poetry]
name = "algotrading"
version = "0.1.0"
description = "Exercises and implementations of the notebooks from the Machine Learning for Algorithmic Trading book."
authors = ["colin-grebenstein <grebensteinforsoftware@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sklearn = "^0.0"
pandas = "^1.3.4"
numpy = "^1.21.3"
pandas-datareader = "^0.10.0"
requests = "^2.26.0"
tqdm = "^4.62.3"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
